tdf#155149 Crash when exiting cell edit mode

regression from
    commit 2dc240a82646fc23c673a6fd5a29ade934dd5b67
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Tue May 2 14:47:43 2023 +0200
    improve AccessibleEventNotifier::addEvent
and
    commit 3b7db802731826b6cc3b55100470b0c61c1f2dfa
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu May 4 10:06:14 2023 +0200
    tdf#105404 [API CHANGE] add index to accessiblity change event

(*) Send better index hints
(*) Error check the index hints better
(*) Convert asserts to warnings and fall back to old code when
    index hint is wrong.

Change-Id: I8e752fc26e729c9c8926beb2c7b196f5418a147e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151419
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>